@@ -69,6 +69,9 @@ div#navigation table {
 <div class="ulist">
 <ul>
 <li>
+<p>Fixed TLS plug out timeout logic. #355</p>
+</li>
+<li>
 <p>Refined client_cli tool. #354</p>
 </li>
 <li>
